<resources>
	<string name="app_name">BlackLight</string>
	<string name="login">Login</string>
	<string name="tail">Tail</string>
	<string name="username">Username</string>
	<string name="passwd">Password</string>
	<string name="toast_empty_username">Please enter your username</string>
	<string name="toast_empty_password">Please enter your password</string>
	<string name="switch_theme">Switch Theme</string>
	<string name="group_all">All</string>
	<string name="group_bilateral">Friends</string>
	<string name="group_create">Create group</string>
	<string name="group_destroy">Delete current group</string>
	<string name="drawer_home">Home</string>
	<string name="drawer_at">Mentions</string>
	<string name="drawer_comments">Comments</string>
	<string name="drawer_dm">Direct Messages</string>
	<string name="drawer_fav">Favorites</string>
	<string name="drawer_settings">Settings</string>
	<string name="timeline">Timeline</string>
	<string name="attitudes">Like</string>
	<string name="retweet">Repost</string>
	<string name="comment">Comment</string>
	<string name="status_mention_me">Weibos that mentioned me</string>
	<string name="comment_mention_me">Comments that mentioned me</string>
	<string name="loading_more">Loading more……</string>
	<string name="new_post">Post a new weibo</string>
	<string name="comment_on">Make a comment</string>
	<string name="repost">Repost weibo</string>
	<string name="reply_to">Reply to the comment</string>
	<string name="reply">Reply</string>
	<string name="remove_attitude">Unlike</string>
	<string name="repost_and_comment">Also make a comment</string>
	<string name="repost_and_comment_the_original">Also comment on the origin weibo</string>
	<string name="comment_and_repost">Also make a repost</string>
	<string name="comment_orig">Also comment on the origin weibo</string>
	<string name="topics_info">Topic info</string>
	<string name="emoticon">Emoticon</string>
	<string name="color">Text Color</string>
	<string name="new_picture">Add picture</string>
	<string name="delete_picture">Delete picture</string>
	<string name="at">Choose the people to @</string>
	<string name="topic">Add topic symbol \'#\'</string>
	<string name="long_post">Long post</string>
	<string name="long_from">Generated by BlackLight</string>
	<string name="comment_delete">Delete comment</string>
	<string name="comment_view_orig">View origin weibo</string>
	<string name="refresh">Refresh</string>
	<string name="share">Share</string>
	<string-array name="picture_picker_array">
		<item>Choose picture(s) from Photo Gallery</item>
		<item>Take picture(s)</item>
		<item>Add multiple pictures</item>
	</string-array>
	<string name="multiple_pictures">Add multiple pictures</string>
	<string name="just_now">Just now</string>
	<string name="min">&#160;minute(s) ago</string>
	<string name="hour">&#160;hour(s) ago</string>
	<string name="day">&#160;day(s) ago</string>
	<string name="month">&#160;month(s) ago</string>
	<string name="year">&#160;year(s) ago</string>
	<string name="today">Today</string>
	<string name="yesterday">Yesterday</string>
	<string name="the_day_before_yesterday">2 days ago</string>
	<string name="user_info">User info</string>
	<string name="user_statuses">User\'s weibo</string>
	<string name="followers">Followers</string>
	<string name="following">Following</string>
	<string name="msgs">Weibo</string>
	<string name="like">Favourites</string>
	<string name="following_me">Followed</string>
	<string name="i_am_following">Following</string>
	<string name="following_each_other">Friend</string>
	<string name="no_following">Stranger</string>
	<string name="follow">Follow</string>
	<string name="unfollow">Unfollow</string>
	<string name="change_group">Change group</string>
	<string name="ten_thousand">null</string>
	<string name="million">M</string>
	<string name="hundred_million">null</string>
	<string name="billion">B</string>
	<string name="single_info">Weibo info</string>
	<string name="delete">Delete</string>
	<string name="fav_add">Add to favourites</string>
	<string name="fav_del">Remove from favourites</string>
	<string name="copy">Copy weibo</string>
	<string name="okay">Okay</string>
	<string name="single_comment">Comment</string>
	<string name="single_repost">Repost</string>
	<string name="direct_message">Messages</string>
	<string name="search">Search</string>
	<string-array name="search_type">
		<item>Weibo</item>
		<item>User</item>
	</string-array>
	<string-array name="email_auto_complete_tips" translatable="false">
		<item>\@sina.com</item>
		<item>\@163.com</item>
		<item>\@qq.com</item>
		<item>\@gmail.com</item>
		<item>\@hotmail.com</item>
		<item>\@126.com</item>
		<item>\@sohu.com</item>
		<item>\@vip.sina.com</item>
		<item>\@vip.qq.com</item>
		<item>\@yeah.net</item>
	</string-array>
	<string-array name="developer_weibo_uids" translatable="false">
		<item>1789004515</item>
		<item>1870051034</item>
		<item>1689129907</item>
		<item>2278020463</item>
		<item>1719269605</item>
		<item>2121014783</item>
		<item>1948661843</item>
		<item>2984891190</item>
		<item>1797272061</item>
	</string-array>
	<string name="save">Save</string>
	<string name="settings">Settings</string>
	<string name="about">About</string>
	<string name="version">Version</string>
	<string name="developers_title">Developers and Thanks</string>
	<string name="source_code_title">Source code</string>
	<string name="source_code_summary">https://github.com/PaperAirplane-Dev-Team/BlackLight</string>
	<string name="license">Open-source license</string>
	<string name="actions">Action</string>
	<string name="fast_scroll">List fast scroll</string>
	<string name="shake_to_return">Shake to return</string>
	<string name="right_handed">Right-handed mode</string>
	<string name="right_handed_des">Move the drawer to the right side, better for phones with larger screen.</string>
	<string name="account">Account</string>
	<string name="account_logout">Log out</string>
	<string name="feedback">Feedback</string>
	<string name="feedback_send">Send Feedback</string>
	<string name="feedback_sum">Tell us anything about this app</string>
	<string name="debug">Debug</string>
	<string name="debug_autosubmit">Automatically submit crash log</string>
	<string name="debug_autosubmit_sum">Check this means that you have known that we will collect and send your device info and Weibo uid to our server without informing you every time.</string>
	<string name="debug_log">Crash log</string>
	<string name="debug_submit_log">Submit crash log</string>
	<string name="debug_crash">(DANGER) Crash now</string>
	<string name="debug_crash_sum">Please DON\'T report to developers if you click it.</string>
	<string name="notification">Notification</string>
	<string name="notification_sound">Sound</string>
	<string name="notification_vibrate">Vibration</string>
	<string name="notification_interval">Notification interval</string>
	<string name="set_interval">Set notification interval</string>
	<string name="good">Rate me</string>
	<string name="good_sum">:-) You know I\'ll be really happy if you give me 5 stars.</string>
	<string name="play_url">https://play.google.com/store/apps/details?id=us.shandian.blacklight</string>
	<string name="network">Network</string>
	<string name="auto_nopic">Auto save traffic</string>
	<string name="auto_nopic_sum">Load pictures only if WiFi is connected</string>
	<string-array name="interval_name">
		<item>1 minute</item>
		<item>3 minutes</item>
		<item>5 minutes</item>
		<item>10 minutes</item>
		<item>30 minutes</item>
		<item>Never</item>
	</string-array>
	<string name="language">Language</string>
	<string-array name="langs" translatable="false">
		<item>English</item>
		<item>简体中文</item>
		<item>繁體中文</item>
	</string-array>
	<string name="donation">Donate</string>
	<string name="donation_des">Donate if you like ;-)</string>
	<string name="alipay">Alipay</string>
	<string name="paypal">Paypal</string>
	<string name="digital_ocean">DigitalOcean Referral Links</string>
	<string name="petercxy">PeterCxy (Main Dev)</string>
	<string name="petercxy_alipay">xqsx43cxy@gmail.com</string>
	<string name="petercxy_paypal">xqsx43cxy@126.com</string>
	<string name="petercxy_do">https://www.digitalocean.com/?refcode=d24140d44ee7</string>
	<string name="micromacer">Micromacer (Designer)</string>
	<string name="micromacer_alipay">micromacer@me.com</string>
	<string name="fb">Feedback</string>
	<string name="fb_title">Feedback title</string>
	<string name="fb_content">Feedback content</string>
	<string name="fb_sent">Feedback sent along with your last crash log. We will contact you if we need more information.</string>
	<string name="fb_send">Send</string>
	<string name="plz_wait">Please wait……</string>
	<string name="name_fetching">Fetching names……</string>
	<string name="expires_in">The token will be invalid in %d days.</string>
	<string name="login_fail">:-( Login failed. Maybe due to wrong AppId/AppSecret/Username/Password.</string>
	<string name="send_fail">Send failed.</string>
	<string name="confirm_delete">Confirm?</string>
	<string name="new_comment">%d new comments.</string>
	<string name="new_at">%d new mentions you.</string>
	<string name="new_at_detail_weibo">%d weibo(s)</string>
	<string name="new_at_detail_and">&#160;and&#160;</string>
	<string name="new_at_detail_comment">%d comment(s)</string>
	<string name="new_dm">%d new direct messages.</string>
	<string name="click_to_view">Click to view</string>
	<string name="empty_weibo">Just say something before you click me!</string>
	<string name="not_loaded">Please try again after the picture is loaded.</string>
	<string name="saved_to">The pictures has been saved to %s.</string>
	<string name="save_failed">Save failed.</string>
	<string name="needs_restart">Will not take effect before you restart the app.</string>
	<string name="copied">Contents copied to clipboard</string>
</resources>