<!--
* Copyright (C) 2014 Peter Cai
*
* This file is part of BlackLight
*
* BlackLight is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* BlackLight is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with BlackLight.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/switch_theme"
		android:title="@string/switch_theme"
		app:showAsAction="never"/>

	<item
		android:id="@+id/group_create"
		android:title="@string/group_create"
		app:showAsAction="never"/>

	<item
		android:id="@+id/group_destroy"
		android:title="@string/group_destroy"
		app:showAsAction="never"/>

	<item
		android:id="@+id/search"
		android:icon="@drawable/ic_action_search"
		android:title="@string/search"
		app:showAsAction="always"/>
	
</menu>
