<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2014 Peter Cai
*
* This file is part of BlackLight
*
* BlackLight is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* BlackLight is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with BlackLight.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent">

	<include
		layout="@layout/toolbar"/>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="-80dp"
		android:layout_below="@+id/toolbar">

	<info.papdt.blacklight.ui.common.GenerousSlidingUpPanelLayout
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/user_slide"
		android:gravity="bottom"
		app:panelHeight="300dp"
		app:paralaxOffset="100dp"
		app:shadowHeight="0dp"
		app:overlay="true">

			<LinearLayout
				android:id="@+id/user_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="280dp"
					android:paddingTop="79dp">

					<ImageView
						android:id="@+id/user_cover"
						android:scaleType="centerCrop"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:src="@drawable/public_bkg"/>

					<View
						android:id="@+id/user_dim"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="@color/dim_gray"/>

					<ImageView
						android:id="@+id/user_info_button"
						android:scaleType="centerInside"
						android:layout_width="20dp"
						android:layout_height="20dp"
						android:layout_alignParentRight="true"
						android:layout_alignParentBottom="true"
						android:layout_marginRight="8dp"
						android:layout_marginBottom="8dp"
						android:src="@drawable/ic_info"
						android:alpha="0.6"/>

					<ScrollView
						android:id="@+id/user_des_scroll"
						android:layout_width="200dp"
						android:layout_height="100dp"
						android:layout_alignParentRight="true"
						android:layout_alignParentBottom="true"
						android:layout_marginRight="5dp"
						android:layout_marginBottom="35dp"
						android:background="@color/white"
						android:visibility="gone">

						<TextView
							android:id="@+id/user_des"
							android:layout_width="200dp"
							android:layout_height="wrap_content"
							android:padding="5dp"
							android:gravity="center"
							android:background="@color/white"
							android:textSize="14sp"
							android:textColor="@color/action_gray"/>

					</ScrollView>

				</RelativeLayout>

			</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="79dp">
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="60dp"
					android:layout_marginTop="20dp"
					android:paddingLeft="90dp"
					android:background="?attr/UserInfoBackground"
					android:orientation="horizontal">

					<LinearLayout
						android:id="@+id/user_following_container"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="0.5"
						android:orientation="vertical"
						android:background="?attr/UserInfoDivider"
						android:gravity="center">

						<TextView
							android:id="@+id/user_following"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="center"
							android:singleLine="true"
							android:textSize="19sp"
							android:textColor="?attr/UserInfoText"/>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textSize="10sp"
							android:textColor="?attr/CardForeground"
							android:text="@string/following"/>

					</LinearLayout>

					<LinearLayout
						android:id="@+id/user_followers_container"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="0.5"
						android:orientation="vertical"
						android:background="?attr/UserInfoDivider"
						android:gravity="center">

						<TextView
							android:id="@+id/user_followers"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="center"
							android:singleLine="true"
							android:textSize="19sp"
							android:textColor="?attr/UserInfoText"
							android:text="0"/>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textSize="10sp"
							android:textColor="?attr/CardForeground"
							android:text="@string/followers"/>

					</LinearLayout>
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="0.5"
						android:orientation="vertical"
						android:background="?attr/UserInfoDivider"
						android:gravity="center">

						<TextView
							android:id="@+id/user_msgs"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="center"
							android:singleLine="true"
							android:textSize="19sp"
							android:textColor="?attr/UserInfoText"
							android:text="0"/>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textSize="10sp"
							android:textColor="?attr/CardForeground"
							android:text="@string/msgs"/>

					</LinearLayout>

					<LinearLayout
						android:id="@+id/user_follow"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_marginRight="5dp"
						android:layout_weight="0.4"
						android:clickable="true"
						android:background="@drawable/drawer_selector"
						android:gravity="center"
						android:orientation="horizontal">

						<info.papdt.blacklight.ui.common.TintImageView
							android:id="@+id/user_follow_img"
							android:scaleType="centerInside"
							android:layout_width="25dp"
							android:layout_height="25dp"
							android:layout_marginRight="5dp"
							android:src="@drawable/ic_action_new"
							app:tintColor="?attr/CardForeground"/>

						<TextView
							android:id="@+id/user_follow_state"
							android:layout_width="40dp"
							android:layout_height="wrap_content"
							android:textSize="12sp"
							android:textColor="?attr/CardForeground"
							android:gravity="center"
							android:text="@string/no_following"/>
					</LinearLayout>

				</LinearLayout>

				<de.hdodenhof.circleimageview.CircleImageView
					android:id="@+id/user_avatar"
					android:layout_width="70dp"
					android:layout_height="70dp"
					android:layout_alignParentTop="true"
					android:layout_alignParentLeft="true"
					android:layout_marginBottom="10dp"
					android:layout_marginLeft="10dp"
					android:src="@color/gray"/>

			</RelativeLayout>

			<FrameLayout
				android:id="@+id/user_timeline_container"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="?android:attr/windowBackground"/>

		</LinearLayout>

	</info.papdt.blacklight.ui.common.GenerousSlidingUpPanelLayout>

	</FrameLayout>

	<View
		android:id="@+id/action_shadow"
		android:layout_width="match_parent"
		android:layout_height="3dp"
		android:layout_below="@+id/toolbar"
		android:background="@drawable/action_shadow"/>

</RelativeLayout>
